<resources>
  <string name="app_name">Car Service Client</string>
  <string name="action_about">About</string>
  <string name="action_log_out">Logout</string>
  <string name="welcome_title">KEEP YOUR OIL\nIMPORTANT\nINFORMATION</string>
  <string name="sign_in">Sign in</string>
  <string name="no_oil_text">There is no oil in a car engine!</string>
  <string name="new_btn_text">NEW</string>
  <string name="edit_btn_text">EDIT</string>
  <string name="history_btn_text">HISTORY</string>
  <string name="oil_information">Oil information</string>
  <string name="oil_brand_name">Brand name</string>
  <string name="oil_type">Type</string>
  <string name="oil_volume">Volume</string>
  <string name="mileage_information">Mileage information</string>
  <string name="km">Km</string>
  <string name="mil">Mil</string>
  <string name="current">Current</string>
  <string name="recommended">Recommended</string>
  <string name="next">Next</string>
  <string name="middle_month">Middle month</string>
  <string name="date_information">Date information</string>
  <string name="done_date">Replace Date</string>
  <string name="next_date">Next Date</string>
  <string name="service_phone_number">Service phone number</string>
  <string name="notes">Notes</string>
  <string name="notes_text">Notes Text…</string>
  <string name="garage_btn_text">GARAGE</string>
  <string name="delete_btn_text">DELETE</string>
  <string name="add_btn_text">ADD</string>
  <string name="create_new_oil_activity_title">New Engine Oil</string>
  <string name="edit_oil_activity_title">Edit Current Oil</string>
  <string name="oil_history_activity_title">Oil History</string>
  <string name="fill_oil_information">Fill oil information</string>
  <string name="fill_mileage_information">Fill mileage information</string>
  <string name="middle_month_set_manually_km">Middle month Km\nset manually  </string>
  <string name="middle_month_set_manually_mil">Middle month Mil\nset manually  </string>
  <string name="select_date">Select date</string>
  <string name="phone_number">Phone number</string>
  <string name="save_in_contacts">Save in contacts</string>
  <string name="contact_name">Name</string>
  <string name="garage_activity_title">My Garage</string>
  <string name="edit_car_activity_title">Edit Car</string>
  <string name="add_new_car_activity_title">Add New Car</string>
  <string name="car_information">Car information</string>
  <string name="car_brand">Brand</string>
  <string name="car_model">Model</string>
  <string name="car_year">Year</string>
  <string name="car_license_plate">Car license plate</string>
  <string name="license_plate">License plate</string>
  <string name="car_vin_code">Car VIN code</string>
  <string name="car_model_name">name</string>
  <string name="car_distance_unit">Distance unit</string>
  <string name="enter_vin_code_optional">Enter vin code (optional)</string>
  <string name="choose_your_action">Choose your action \nfor notification</string>
  <string name="select_reminder_date_btn_text">SELECT REMINDER DATE</string>
  <string name="set_mileage_btn_text">SET MILEAGE</string>
  <string name="current_mileage">Current Mileage</string>
  <string name="the_next_reminder_date_is_set">The next reminder date is set</string>
  <string name="dlg_logout_title">Are you sure you want to log out?</string>
  <string name="dlg_make_call_title">Make call?</string>
  <string name="dlg_ok">OK</string>
  <string name="dlg_yes">Yes</string>
  <string name="dlg_set">Set</string>
  <string name="dlg_call_via">Call via</string>
  <string name="dlg_call">Call</string>
  <string name="dlg_cancel">Cancel</string>
  <string name="dlg_enable_autostart_title">Enable AutoStart</string>
  <string name="dlg_pls_allow">Please allow</string>
  <string name="dlg_pls_allow_txt">to always run in the background,else our services can\'t be accessed.</string>
  <string name="dlg_info_title">Info</string>
  <string name="dlg_delete_car_title">Are you sure you want to delete this car?</string>
  <string name="dlg_delete">Delete</string>
  <string name="dlg_wait_please">Please, wait</string>
  <string name="dlg_fail_connection">Sorry, connection lost. Please check your network connection.</string>
  <string name="dlg_internet_connection_error">Something went wrong. Please, verify your internet connection and try again</string>
  <string name="permission_denided">Permission Denied, You cannot call</string>
  <string name="snake_bar_action_msg_allow">ALLOW</string>
  <string name="dlg_info_content_for_current">current km info here</string>
  <string name="dlg_info_content_for_recommended">recommended km info here</string>
  <string name="dlg_info_content_for_next">next km info here</string>
  <string name="dlg_info_content_for_middle">middle month km info here</string>
  <string name="channel_name">Oil notifications</string>
  <string name="channel_description">Oils check reminder notifications</string>
  <string name="msg_network_connection_error">No Internet connection</string>
  <string name="msg_page_not_found">404 Page not found</string>
  <string name="msg_unknown_error">Unknown error</string>
  <string name="msg_bad_request">Bad request</string>
  <string name="msg_not_authorized">User not authorized</string>
  <string name="msg_connection_error">Connection error</string>
  <string name="msg_navigation_drawer_open">Open navigation drawer</string>
  <string name="msg_navigation_drawer_close">Close navigation drawer</string>
  <string name="msg_car_created">Car created!</string>
  <string name="msg_car_not_created">Car not created!</string>
  <string name="err_msg_not_selected">Not Selected</string>
  <string name="err_msg_empty">Can Not Be Empty!</string>
  <string name="err_msg_current_less">Curent Km must be more than the previous service km !</string>
  <string name="err_msg_incorrect_number_lenght">Incorrect Phone number length!</string>
  <string name="err_msg_enter_valid_phone_number">Enter valid phone number</string>
  <string name="err_msg_must_be_more">Curent Km must be more than the previous service km !</string>
  <string name="msg_permission_denided_phone">Permission Denied, You cannot write contacts</string>
  <string name="msg_car_edited">Car edited!</string>
  <string name="msg_car_not_edited">Car not edited!</string>
  <string name="msg_car_deleted">Car deleted!</string>
  <string name="msg_car_not_deleted">Car not deleted!</string>
  <string name="msg_no_cars">Yo Don\'t Have Cars</string>
  <string name="msg_something_wrong">Something wrong</string>
  <string name="msg_time_to_change_oil">Time To Change Oil</string>
  <string name="msg_oil_changed">Oil changed!</string>
  <string name="msg_oil_not_changed">Oil not changed!</string>
  <string name="start_top">M 20.7 7 C 21.1 6.6 21.1 6 20.7 5.6 L 18.4 3.3 C 18 2.9 17.4 2.9 17 3.3 L 15.2 5.1 L 19 8.9</string>
  <string name="end_top">M 19.6 8 C 20 7.6 20 7 19.6 6.6 L 17.3 4.3 C 16.9 3.9 16.3 3.9 15.9 4.3 L 14.1 6.1 L 17.9 9.9</string>
  <string name="en">en</string>
  <string name="de">de</string>
  <string name="es">es</string>
  <string name="fr">fr</string>
  <string name="Xado">Xado</string>
  <string name="Liqui_Moly">Liqui Moly</string>
  <string name="MOBIL_1">MOBIL 1</string>
  <string name="CASTROL">CASTROL</string>
  <string name="oil_type_OW_20">OW-20</string>
  <string name="oil_type_OW_30">OW-30</string>
  <string name="oil_type_OW_40">OW-40</string>
  <string name="oil_type_OW_50">OW-50</string>
  <string name="oil_type_OW_60">OW-60</string>
  <string name="oil_type_5W_20">5W-20</string>
  <string name="oil_type_5W_30">5W-30</string>
  <string name="oil_type_5W_40">5W-40</string>
  <string name="oil_type_5W_50">5W-50</string>
  <string name="oil_type_5W_60">5W-60</string>
  <string name="oil_type_10W_20">10W-20</string>
  <string name="oil_type_10W_30">10W-30</string>
  <string name="oil_type_10W_40">10W-40</string>
  <string name="oil_type_10W_50">10W-50</string>
  <string name="oil_type_10W_60">10W-60</string>
  <string name="oil_type_15W_20">15W-20</string>
  <string name="oil_type_15W_30">15W-30</string>
  <string name="oil_type_15W_40">15W-40</string>
  <string name="oil_type_15W_50">15W-50</string>
  <string name="oil_type_15W_60">15W-60</string>
  <string name="oil_type_20W_20">20W-20</string>
  <string name="oil_type_20W_30">20W-30</string>
  <string name="oil_type_20W_40">20W-40</string>
  <string name="oil_type_20W_50">20W-50</string>
  <string name="oil_type_20W_60">20W-60</string>
  <string name="oil_type_25W_20">25W-20</string>
  <string name="oil_type_25W_30">25W-30</string>
  <string name="oil_type_25W_40">25W-40</string>
  <string name="oil_type_25W_50">25W-50</string>
  <string name="oil_type_25W_60">25W-60</string>
  <string name="SelectOne">Select One…</string>
  <string name="Abadal">Abadal</string>
  <string name="Abbott_detroit">Abbott Detroit</string>
  <string name="Abt_sportsline">ABT Sportsline</string>
  <string name="Ac">AC</string>
  <string name="Acura">Acura</string>
  <string name="Aixam">Aixam</string>
  <string name="Alfa_romeo">Alfa Romeo</string>
  <string name="Alpina">Alpina</string>
  <string name="Alpine">Alpine</string>
  <string name="Alta">Alta</string>
  <string name="Alvis">Alvis</string>
  <string name="American_motors">American Motors</string>
  <string name="Amg">AMG</string>
  <string name="Arash">Arash</string>
  <string name="Ariel">Ariel</string>
  <string name="Aro">ARO</string>
  <string name="Arrinera">Arrinera</string>
  <string name="Artega">Artega</string>
  <string name="Ascari">Ascari</string>
  <string name="Aston_martin">Aston Martin</string>
  <string name="Auburn">Auburn</string>
  <string name="Audi">Audi</string>
  <string name="Austin">Austin</string>
  <string name="Autobacs">Autobacs</string>
  <string name="Autobianchi">Autobianchi</string>
  <string name="Bac">Bac</string>
  <string name="Bamotor">Baic Motor</string>
  <string name="Baojun">Baojun</string>
  <string name="Bentley">Bentley</string>
  <string name="Berkeley">Berkeley</string>
  <string name="Berliet">Berliet</string>
  <string name="Bertone">Bertone</string>
  <string name="Bitter">Bitter</string>
  <string name="Bizzarrini">Bizzarrini</string>
  <string name="Bmw">BMW</string>
  <string name="Bmw_m">BMW M</string>
  <string name="Borgward">Borgward</string>
  <string name="Brabus">Brabus</string>
  <string name="Brammo">Brammo</string>
  <string name="Bridgestone">Bridgestone</string>
  <string name="Brilliance">Brilliance</string>
  <string name="Bristol_cars">Bristol Cars</string>
  <string name="Bufori">Bufori</string>
  <string name="Bugatti">Bugatti</string>
  <string name="Buick">Buick</string>
  <string name="Byd">BYD</string>
  <string name="Cadillac">Cadillac</string>
  <string name="Carlsson">Carlsson</string>
  <string name="Caterham">Caterham</string>
  <string name="Changan">Changan</string>
  <string name="Changfeng">Changfeng</string>
  <string name="Chery">Chery</string>
  <string name="Chevrolet">Chevrolet</string>
  <string name="Chrysler">Chrysler</string>
  <string name="Cisitalia">Cisitalia</string>
  <string name="Citroen">Citroen</string>
  <string name="Cizeta">Cizeta</string>
  <string name="Cole">Cole</string>
  <string name="Continental">Continental</string>
  <string name="Corre_la_licorne">Corre La Licorne</string>
  <string name="Corvette">Corvette</string>
  <string name="Dacia">Dacia</string>
  <string name="Daewoo">Daewoo</string>
  <string name="Daihatsu">Daihatsu</string>
  <string name="Dartz">Dartz</string>
  <string name="Datsun">Datsun</string>
  <string name="Delage">Delage</string>
  <string name="Detroit_electric">Detroit Electric</string>
  <string name="Devel_sixteen">Devel Sixteen</string>
  <string name="De_tomaso">De Tomaso</string>
  <string name="Diatto">Diatto</string>
  <string name="Dina">Dina</string>
  <string name="Dkw">DKW</string>
  <string name="Dmc">DMC</string>
  <string name="Dodge">Dodge</string>
  <string name="Dongfeng">Dongfeng</string>
</resources>