<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/color_background_E5E5E5"
  android:fitsSystemWindows="true"
  tools:context=".ui.activity.CreateNewCarActivity">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/appBar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/app_bar_layout_height"
    android:fitsSystemWindows="true"
    app:elevation="0dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <android.support.design.widget.CollapsingToolbarLayout
      android:id="@+id/collapsingToolbar"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fitsSystemWindows="true"
      app:contentScrim="?attr/colorPrimary"
      app:expandedTitleMarginEnd="64dp"
      app:expandedTitleMarginStart="48dp"
      app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
      app:layout_scrollFlags="scroll|exitUntilCollapsed"
      app:title="@string/add_new_car_activity_title">
      <!--app:titleEnabled="false"-->

      <ImageView
        app:layout_collapseParallaxMultiplier="0.7"
        android:id="@+id/toolbarImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        app:layout_collapseMode="parallax" />

      <include layout="@layout/include_toolbar"/>

    </android.support.design.widget.CollapsingToolbarLayout>

  </android.support.design.widget.AppBarLayout>

  <View
    android:id="@+id/v_shadow"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@drawable/drop_shadow_reverse"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v4.widget.NestedScrollView
      android:id="@+id/nscw"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="none"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <!-- your content here -->
      <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="28dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--Car info-->
        <android.support.v7.widget.CardView
          android:visibility="visible"
          android:id="@+id/cv_oil_info"
          style="@style/ItemCardViewStyle">

          <LinearLayout style="@style/Widget.CardContent">

            <TableLayout style="@style/ItemTableLayoutStyle">

              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                  android:layout_span="2"
                  style="@style/ItemCardHeaderTextStyle"
                  android:text="@string/car_information"
                  android:textColor="@color/colorAccent2" />
              </TableRow>

              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View style="@style/ItemCardHeaderTextUnderLineStyle" />
              </TableRow>
              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                  style="@style/ItemCardFieldTextStyle"
                  android:text="@string/car_brand"/>

                <android.support.v7.widget.AppCompatSpinner
                  android:id="@+id/spinner_car_brands"
                  android:clickable="false"
                  android:spinnerMode="dialog"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="end|center"
                  android:background="@null"
                  android:gravity="end|center"
                  android:singleLine="true"
                  android:textColor="@color/colorPrimary"
                  app:backgroundTint="@color/colorAccent2"
                  tools:listitem="@layout/spinner_brands_selected_item" />

              </TableRow>
              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="0dp">

                <TextView
                  android:text="@string/car_model"
                  style="@style/ItemCardFieldTextStyle" />

                <RelativeLayout
                  android:layout_width="100dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="end|center">

                  <EditText
                    android:textSize="18dp"
                    android:fontFamily="sans-serif-condensed"
                    android:id="@+id/et_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tv_space_area"
                    android:gravity="end|center"
                    android:hint="@string/car_model_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/CreateNewCarActivityEditTextTheme" />

                  <TextView
                    android:textSize="0dp"
                    android:visibility="invisible"
                    android:id="@+id/tv_space_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end|center|bottom"
                    android:paddingStart="22dp"
                    android:paddingEnd="22dp"
                    android:paddingLeft="22dp"
                    android:paddingRight="22dp"
                    android:gravity="start|center"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />


                </RelativeLayout>


                <!--<android.support.v7.widget.AppCompatSpinner-->
                <!--android:id="@+id/spinner_oil_volume"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="end|center"-->
                <!--android:gravity="start|center"-->
                <!--android:singleLine="true"-->
                <!--android:textColor="@android:color/black"-->
                <!--app:backgroundTint="@color/colorPrimaryDark"-->
                <!--tools:listitem="@layout/spinner_item" />-->

              </TableRow>
              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp">

                <TextView
                  android:text="@string/car_year"
                  style="@style/ItemCardFieldTextStyle"/>

                <android.support.v7.widget.AppCompatSpinner
                  android:id="@+id/spinner_car_years"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="end|center"
                  android:background="@null"
                  android:gravity="end|center"
                  android:singleLine="true"
                  android:textColor="@color/colorPrimary"
                  app:backgroundTint="@color/colorAccent2"
                  tools:listitem="@layout/spinner_item" />

              </TableRow>
              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp">

                <TextView
                  android:text="@string/car_distance_unit"
                  style="@style/ItemCardFieldTextStyle" />

                <android.support.v7.widget.AppCompatSpinner
                  android:id="@+id/spinner_car_dencity_unit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="end|center"
                  android:background="@null"
                  android:gravity="end|center"
                  android:singleLine="true"
                  android:textColor="@color/colorPrimary"
                  app:backgroundTint="@color/colorAccent2"
                  tools:listitem="@layout/spinner_item" />

              </TableRow>
            </TableLayout>
          </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Car numbers-->
        <android.support.v7.widget.CardView
          style="@style/ItemCardViewStyle"
          android:visibility="visible">

          <LinearLayout style="@style/Widget.CardContent">

            <TableLayout style="@style/ItemTableLayoutStyle">

              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                  style="@style/ItemCardHeaderTextStyle"
                  android:text="@string/car_license_plate"
                  android:textColor="@color/colorAccent2" />
              </TableRow>

              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View style="@style/ItemCardHeaderTextUnderLineStyle" />
              </TableRow>
              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp">

                <android.support.design.widget.TextInputLayout
                  android:id="@+id/til_numbers"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingEnd="16dp"
                  android:paddingLeft="8dp"
                  android:paddingRight="16dp"
                  android:hint=" "
                  android:layout_span="2"
                  android:textColorHint="@color/white"
                  app:hintAnimationEnabled="false"
                  app:hintTextAppearance="@style/MyHintText">

                  <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_numbers"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
                    android:hint="@string/license_plate"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:maxLength="9"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="18dp"
                    android:theme="@style/CreateNewCarActivityEditTextTheme" />

                </android.support.design.widget.TextInputLayout>

              </TableRow>
            </TableLayout>
          </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Vin code-->
        <android.support.v7.widget.CardView
          android:visibility="visible"
          style="@style/ItemCardViewStyle">

          <LinearLayout style="@style/Widget.CardContent">

            <TableLayout style="@style/ItemTableLayoutStyle">

              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                  style="@style/ItemCardHeaderTextStyle"
                  android:text="@string/car_vin_code"
                  android:textColor="@color/colorAccent2" />
              </TableRow>

              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View style="@style/ItemCardHeaderTextUnderLineStyle" />
              </TableRow>
              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp">

                <android.support.design.widget.TextInputLayout
                  android:layout_span="2"
                  android:id="@+id/til_vin_code"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingEnd="16dp"
                  android:paddingLeft="8dp"
                  android:paddingRight="16dp"
                  android:hint=" "
                  android:textColorHint="@color/white"
                  app:hintAnimationEnabled="false"
                  app:hintTextAppearance="@style/MyHintText">

                  <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_vin_code"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="25"
                    android:hint="@string/enter_vin_code_optional"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="18dp"
                    android:theme="@style/CreateNewCarActivityEditTextTheme" />

                </android.support.design.widget.TextInputLayout>

              </TableRow>
            </TableLayout>
          </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Car color-->
        <android.support.v7.widget.CardView
          android:visibility="gone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="10dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:elevation="4dp"
          tools:targetApi="lollipop"
          card_view:cardBackgroundColor="@color/white">

          <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:stretchColumns="*">

              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="start"
                  android:paddingLeft="10dp"
                  android:gravity="center"
                  android:text="Car color"
                  android:textColor="@color/colorAccent2"
                  android:textSize="14dp" />
              </TableRow>
              <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingTop="16dp">

                <RelativeLayout
                  android:id="@+id/rl_color_picker_background"
                  android:background="#aaa"
                  android:layout_width="match_parent"
                  android:layout_height="56dp">


                  <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical">

                    <ImageView
                      android:id="@+id/img_color_picker"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:src="@drawable/ic_format_color_fill_white_24dp" />
                  </LinearLayout>
                </RelativeLayout>

              </TableRow>

            </TableLayout>


          </LinearLayout>
        </android.support.v7.widget.CardView>

        <Space
          android:layout_width="match_parent"
          android:layout_height="@dimen/space_height_small" />

      </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

  </LinearLayout>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab_save_car_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:elevation="6dp"
    android:src="@drawable/ic_done_white_24dp"
    android:tint="@color/white"
    app:layout_anchor="@id/appBar"
    app:layout_anchorGravity="bottom|right|end"
    app:backgroundTint="@color/colorAccent2"
    app:fabSize="normal"
    tools:targetApi="lollipop" />

</android.support.design.widget.CoordinatorLayout>


<!--@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-->
